[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "SCOP is Solver for COnstraint Programing."
homepage = "https://github.com/SaitoTsutomu/myscop"
license = "PSFL"
name = "myscop"
readme = "README.md"
version = "0.0.3"

[tool.poetry.dependencies]
more-itertools = "^8.6.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
mypy = "^0.790"
pytest = "^5.2"
snapshottest = "^0.6.0"
pandas = "1.1.3"
numpy = "1.19.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
